--- a/index.html
+++ b/index.html
@@ -85,8 +85,12 @@
                                 </div>
                                 <div class="col-right-bookshelf">
                                     <h3>Book Title</h3>
-                                    <p>Penulis: John Doe</p>
-                                    <p>Tahun: 2002</p>                          
+                                    <p>Penulis: 
+                                         <span>John Doe<span>
+                                    </p>
+                                    <p class="book_year">Tahun: 
+                                         <span>2002</span>
+                                    </p>                        
                                 </div>  
                                 <div class="action">
                                     <button class="green">Not finished </button>
@@ -105,8 +109,12 @@
                             </div>
                             <div class="col-right-bookshelf">
                                 <h3>Book Title</h3>
-                                <p>Penulis: John Doe</p>
-                                <p>Tahun: 2002</p>                          
+                                <p>Penulis: 
+                                     <span>John Doe<span>
+                                </p>
+                                <p class="book_year">Tahun: 
+                                     <span>2002</span>
+                                </p>                            
                             </div>  
                             <div class="action">
                                 <button class="green">Not finished </button>
